[package]
name = "gravatar-reverse-proxy"
version = "0.1.0"
authors = ["星川かえで <futursolo@icloud.com>"]

[dependencies]
iron = "0.5"
router = "0.5"
hyper = "0.10"
lazy_static = "0.2"
regex = "0.2"
hyper-rustls = "0.3"
urlencoded = "0.5"
persistent = "0.3"
lru-cache = "0.1"
time = "0.1"
crypto-hash = "0.2"
